[gd_scene load_steps=23 format=2]

[ext_resource path="res://Art/TileMaps/walls_asset_aseprite.png" type="Texture" id=1]
[ext_resource path="res://Art/Rooms/Door/First_door.tscn" type="PackedScene" id=2]
[ext_resource path="res://Art/Rooms/NewRoom.gd" type="Script" id=3]

[sub_resource type="ConvexPolygonShape2D" id=38]
points = PoolVector2Array( 0, 0, 8, 0, 8, 32, 0, 32 )

[sub_resource type="TileSet" id=21]
1/name = "walls_asset_aseprite.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 88, 48, 8, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 38 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 38 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "walls_asset_aseprite.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 96, 112, 16, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=23]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=24]
0/name = "walls_asset_aseprite.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 16, 8, 32, 72 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 23 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 23 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="TileSet" id=37]
0/name = "walls_asset_aseprite.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 96, 112, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=39]
points = PoolVector2Array( 8, 0, 8, 0, 8, 8, 8, 8 )

[sub_resource type="ConvexPolygonShape2D" id=40]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=41]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=42]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=43]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=44]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=45]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=46]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=47]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=48]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=49]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="ConvexPolygonShape2D" id=50]
points = PoolVector2Array( 0, 0, 8, 0, 8, 8, 0, 8 )

[sub_resource type="TileSet" id=3]
0/name = "walls_asset_aseprite.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 64, 48, 8, 8 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 39 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 39 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
2/name = "walls_asset_aseprite.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 88, 24, 8, 8 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 43 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 43 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "walls_asset_aseprite.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 88, 8, 8, 8 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 44 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 44 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "walls_asset_aseprite.png 4"
4/texture = ExtResource( 1 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 112, 8, 8, 8 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 45 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 45 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "walls_asset_aseprite.png 5"
5/texture = ExtResource( 1 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 8, 8, 8 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 46 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 46 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "walls_asset_aseprite.png 6"
6/texture = ExtResource( 1 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 24, 8, 8 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 47 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 47 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "walls_asset_aseprite.png 7"
7/texture = ExtResource( 1 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 112, 24, 8, 8 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 48 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 48 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "walls_asset_aseprite.png 8"
8/texture = ExtResource( 1 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 144, 8, 8, 8 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape = SubResource( 49 )
8/shape_one_way = false
8/shape_one_way_margin = 1.0
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 49 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "walls_asset_aseprite.png 9"
9/texture = ExtResource( 1 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 160, 8, 8, 8 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shape_offset = Vector2( 0, 0 )
9/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
9/shape = SubResource( 50 )
9/shape_one_way = false
9/shape_one_way_margin = 1.0
9/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 50 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
9/z_index = 0
10/name = "walls_asset_aseprite.png 10"
10/texture = ExtResource( 1 )
10/tex_offset = Vector2( 0, 0 )
10/modulate = Color( 1, 1, 1, 1 )
10/region = Rect2( 144, 24, 8, 8 )
10/tile_mode = 0
10/occluder_offset = Vector2( 0, 0 )
10/navigation_offset = Vector2( 0, 0 )
10/shape_offset = Vector2( 0, 0 )
10/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
10/shape = SubResource( 40 )
10/shape_one_way = false
10/shape_one_way_margin = 1.0
10/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 40 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
10/z_index = 0
11/name = "walls_asset_aseprite.png 11"
11/texture = ExtResource( 1 )
11/tex_offset = Vector2( 0, 0 )
11/modulate = Color( 1, 1, 1, 1 )
11/region = Rect2( 160, 24, 8, 8 )
11/tile_mode = 0
11/occluder_offset = Vector2( 0, 0 )
11/navigation_offset = Vector2( 0, 0 )
11/shape_offset = Vector2( 0, 0 )
11/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
11/shape = SubResource( 41 )
11/shape_one_way = false
11/shape_one_way_margin = 1.0
11/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 41 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
11/z_index = 0
12/name = "walls_asset_aseprite.png 12"
12/texture = ExtResource( 1 )
12/tex_offset = Vector2( 0, 0 )
12/modulate = Color( 1, 1, 1, 1 )
12/region = Rect2( 88, 48, 8, 8 )
12/tile_mode = 0
12/occluder_offset = Vector2( 0, 0 )
12/navigation_offset = Vector2( 0, 0 )
12/shape_offset = Vector2( 0, 0 )
12/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
12/shape = SubResource( 42 )
12/shape_one_way = false
12/shape_one_way_margin = 1.0
12/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 42 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
12/z_index = 0
14/name = "walls_asset_aseprite.png 14"
14/texture = ExtResource( 1 )
14/tex_offset = Vector2( 0, 0 )
14/modulate = Color( 1, 1, 1, 1 )
14/region = Rect2( 64, 96, 8, 8 )
14/tile_mode = 0
14/occluder_offset = Vector2( 0, 0 )
14/navigation_offset = Vector2( 0, 0 )
14/shape_offset = Vector2( 0, 0 )
14/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
14/shape_one_way = false
14/shape_one_way_margin = 0.0
14/shapes = [  ]
14/z_index = 0
15/name = "walls_asset_aseprite.png 15"
15/texture = ExtResource( 1 )
15/tex_offset = Vector2( 0, 0 )
15/modulate = Color( 1, 1, 1, 1 )
15/region = Rect2( 96, 112, 16, 16 )
15/tile_mode = 0
15/occluder_offset = Vector2( 0, 0 )
15/navigation_offset = Vector2( 0, 0 )
15/shape_offset = Vector2( 0, 0 )
15/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
15/shape_one_way = false
15/shape_one_way_margin = 0.0
15/shapes = [  ]
15/z_index = 0

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 12.75, 27.25 )

[node name="NewRoom" type="Node2D"]
script = ExtResource( 3 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="TileMap3" type="TileMap" parent="Navigation2D"]
tile_set = SubResource( 21 )
cell_size = Vector2( 8, 32 )
bake_navigation = true
format = 1

[node name="TileMap4" type="TileMap" parent="Navigation2D"]
position = Vector2( 0, 32 )
z_index = 1
tile_set = SubResource( 24 )
cell_size = Vector2( 32, 72 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, -65532, 0, 0, -65528, 0, 0, -65527, 0, 0, -65526, 0, 0, -65525, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0 )

[node name="TileMapFloor" type="TileMap" parent="Navigation2D"]
tile_set = SubResource( 37 )
cell_size = Vector2( 32, 32 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( 65537, 1073741824, 0, 65538, 1073741824, 0, 65539, 1073741824, 0, 65540, 1073741824, 0, 65544, 1073741824, 0, 65545, 1073741824, 0, 65546, 1073741824, 0, 65547, 1073741824, 0, 131073, 1073741824, 0, 131074, 1073741824, 0, 131075, 1073741824, 0, 131076, 1073741824, 0, 131080, 1073741824, 0, 131081, 1073741824, 0, 131082, 1073741824, 0, 131083, 1073741824, 0, 196609, 1073741824, 0, 196610, 1073741824, 0, 196611, 1073741824, 0, 196612, 1073741824, 0, 196613, 1073741824, 0, 196614, 1073741824, 0, 196615, 1073741824, 0, 196616, 1073741824, 0, 196617, 1073741824, 0, 196618, 1073741824, 0, 196619, 1073741824, 0, 262145, 1073741824, 0, 262146, 1073741824, 0, 262147, 1073741824, 0, 262148, 1073741824, 0, 262149, 1073741824, 0, 262150, 1073741824, 0, 262151, 1073741824, 0, 262152, 1073741824, 0, 262153, 1073741824, 0, 262154, 1073741824, 0, 262155, 1073741824, 0, 262156, 1073741824, 0, 262157, 1073741824, 0, 262158, 1073741824, 0, 262159, 1073741824, 0, 262160, 1073741824, 0, 262161, 1073741824, 0, 262162, 1073741824, 0, 262163, 1073741824, 0, 262164, 1073741824, 0, 262165, 1073741824, 0, 262166, 1073741824, 0, 262167, 1073741824, 0, 327681, 1073741824, 0, 327682, 1073741824, 0, 327683, 1073741824, 0, 327684, 1073741824, 0, 327685, 1073741824, 0, 327686, 1073741824, 0, 327687, 1073741824, 0, 327688, 1073741824, 0, 327689, 1073741824, 0, 327690, 1073741824, 0, 327691, 1073741824, 0, 327692, 1073741824, 0, 327693, 1073741824, 0, 327694, 1073741824, 0, 327695, 1073741824, 0, 327696, 1073741824, 0, 327697, 1073741824, 0, 327698, 1073741824, 0, 327699, 1073741824, 0, 327700, 1073741824, 0, 327701, 1073741824, 0, 327702, 1073741824, 0, 327703, 1073741824, 0, 393217, 1073741824, 0, 393218, 1073741824, 0, 393219, 1073741824, 0, 393220, 1073741824, 0, 393221, 1073741824, 0, 393222, 1073741824, 0, 393223, 1073741824, 0, 393224, 1073741824, 0, 393225, 1073741824, 0, 393226, 1073741824, 0, 393227, 1073741824, 0, 458753, 1073741824, 0, 458754, 1073741824, 0, 458755, 1073741824, 0, 458756, 1073741824, 0, 458757, 1073741824, 0, 458758, 1073741824, 0, 458759, 1073741824, 0, 458760, 1073741824, 0, 458761, 1073741824, 0, 458762, 1073741824, 0, 458763, 1073741824, 0, 524289, 1073741824, 0, 524290, 1073741824, 0, 524291, 1073741824, 0, 524292, 1073741824, 0, 524293, 1073741824, 0, 524294, 1073741824, 0, 524295, 1073741824, 0, 524296, 1073741824, 0, 524297, 1073741824, 0, 524298, 1073741824, 0, 524299, 1073741824, 0 )

[node name="TileMap" type="TileMap" parent="Navigation2D"]
z_index = 1
tile_set = SubResource( 3 )
cell_size = Vector2( 8, 8 )
bake_navigation = true
format = 1
tile_data = PoolIntArray( -327677, 4, 0, -327660, 5, 0, -327649, 4, 0, -327632, 5, 0, -262141, 0, 0, -262124, 12, 0, -262113, 0, 0, -262096, 12, 0, -196605, 0, 0, -196588, 12, 0, -196577, 0, 0, -196560, 12, 0, -131069, 0, 0, -131052, 12, 0, -131041, 0, 0, -131024, 12, 0, -65533, 0, 0, -65516, 12, 0, -65505, 0, 0, -65488, 12, 0, 3, 0, 0, 20, 12, 0, 31, 0, 0, 48, 12, 0, 65539, 0, 0, 65556, 12, 0, 65567, 0, 0, 65584, 12, 0, 131075, 0, 0, 131092, 12, 0, 131103, 0, 0, 131120, 12, 0, 196611, 0, 0, 196628, 12, 0, 196639, 0, 0, 196656, 12, 0, 262147, 0, 0, 262148, 13, 0, 262152, 13, 0, 262156, 13, 0, 262160, 13, 0, 262164, 10, 0, 262175, 11, 0, 262176, 13, 0, 262180, 13, 0, 262184, 13, 0, 262188, 13, 0, 262192, 12, 0, 327683, 0, 0, 327728, 12, 0, 393219, 0, 0, 393264, 12, 0, 458755, 0, 0, 458800, 12, 0, 524291, 0, 0, 524292, 13, 0, 524296, 13, 0, 524300, 13, 0, 524304, 13, 0, 524320, 13, 0, 524324, 13, 0, 524328, 13, 0, 524332, 13, 0, 524336, 12, 0, 589827, 0, 0, 589872, 12, 0, 655363, 0, 0, 655408, 12, 0, 720899, 0, 0, 720944, 12, 0, 786435, 0, 0, 786436, 13, 0, 786440, 13, 0, 786444, 13, 0, 786448, 13, 0, 786452, 13, 0, 786456, 13, 0, 786460, 13, 0, 786464, 13, 0, 786468, 13, 0, 786472, 13, 0, 786476, 13, 0, 786480, 12, 0, 851971, 0, 0, 852016, 12, 0, 917507, 0, 0, 917552, 12, 0, 983043, 0, 0, 983088, -1610612725, 0, 983089, 2, 0, 983090, 2, 0, 983091, 2, 0, 983092, 2, 0, 983093, 2, 0, 983094, 2, 0, 983095, 2, 0, 983096, 2, 0, 983097, 2, 0, 983098, 2, 0, 983099, 2, 0, 983100, 2, 0, 983101, 2, 0, 983102, 2, 0, 983103, 2, 0, 983104, 2, 0, 983105, 2, 0, 983106, 2, 0, 983107, 2, 0, 983108, 2, 0, 983109, 2, 0, 983110, -1610612736, 0, 983111, 2, 0, 983112, 2, 0, 983113, 2, 0, 983114, 2, 0, 983115, 2, 0, 983116, 2, 0, 983117, 2, 0, 983118, 2, 0, 983119, 2, 0, 983120, 2, 0, 983121, 2, 0, 983122, 2, 0, 983123, 2, 0, 983124, 2, 0, 983125, 2, 0, 983126, 2, 0, 983127, 14, 0, 983128, 14, 0, 983129, 14, 0, 983130, 14, 0, 983131, 14, 0, 983132, 14, 0, 983133, 14, 0, 983134, 2, 0, 983135, 2, 0, 983136, 5, 0, 1048579, 0, 0, 1048580, 13, 0, 1048584, 13, 0, 1048588, 13, 0, 1048592, 13, 0, 1048596, 13, 0, 1048600, 13, 0, 1048604, 13, 0, 1048608, 13, 0, 1048612, 13, 0, 1048616, 13, 0, 1048620, 13, 0, 1048624, 13, 0, 1048628, 13, 0, 1048632, 13, 0, 1048636, 13, 0, 1048640, 13, 0, 1048644, 13, 0, 1048648, 13, 0, 1048652, 13, 0, 1048656, 13, 0, 1048660, 13, 0, 1048664, 13, 0, 1048668, 13, 0, 1048672, 12, 0, 1114115, 0, 0, 1114208, 12, 0, 1179651, 0, 0, 1179744, 12, 0, 1245187, 0, 0, 1245280, 12, 0, 1310723, 0, 0, 1310724, 13, 0, 1310728, 13, 0, 1310732, 13, 0, 1310736, 13, 0, 1310740, 13, 0, 1310744, 13, 0, 1310748, 13, 0, 1310752, 13, 0, 1310756, 13, 0, 1310760, 13, 0, 1310764, 13, 0, 1310768, 13, 0, 1310772, 13, 0, 1310776, 13, 0, 1310780, 13, 0, 1310784, 13, 0, 1310788, 13, 0, 1310792, 13, 0, 1310796, 13, 0, 1310800, 13, 0, 1310804, 13, 0, 1310808, 13, 0, 1310812, 13, 0, 1310816, 12, 0, 1376259, 0, 0, 1376352, 12, 0, 1441795, 0, 0, 1441888, 12, 0, 1507331, 0, 0, 1507424, 12, 0, 1572867, 0, 0, 1572868, 13, 0, 1572872, 13, 0, 1572876, 13, 0, 1572880, 13, 0, 1572884, 13, 0, 1572888, 13, 0, 1572892, 13, 0, 1572896, 13, 0, 1572900, 13, 0, 1572904, 13, 0, 1572908, 13, 0, 1572912, 8, 0, 1572913, 3, 0, 1572914, 3, 0, 1572915, 3, 0, 1572916, 3, 0, 1572917, 3, 0, 1572918, 3, 0, 1572919, 3, 0, 1572920, 3, 0, 1572921, 3, 0, 1572922, 3, 0, 1572923, 3, 0, 1572924, 3, 0, 1572925, 3, 0, 1572926, 3, 0, 1572927, 3, 0, 1572928, 3, 0, 1572929, 3, 0, 1572930, 3, 0, 1572931, 3, 0, 1572932, 3, 0, 1572933, 3, 0, 1572934, 3, 0, 1572935, 3, 0, 1572936, 3, 0, 1572937, 3, 0, 1572938, 3, 0, 1572939, 3, 0, 1572940, 3, 0, 1572941, 3, 0, 1572942, 3, 0, 1572943, 3, 0, 1572944, 3, 0, 1572945, 3, 0, 1572946, 3, 0, 1572947, 3, 0, 1572948, 3, 0, 1572949, 3, 0, 1572950, 3, 0, 1572951, 3, 0, 1572952, 3, 0, 1572953, 3, 0, 1572954, 3, 0, 1572955, 3, 0, 1572956, 3, 0, 1572957, 3, 0, 1572958, 3, 0, 1572959, 3, 0, 1572960, 6, 0, 1638403, 0, 0, 1638448, 12, 0, 1703939, 0, 0, 1703984, 12, 0, 1769475, 0, 0, 1769520, 12, 0, 1835011, 0, 0, 1835012, 13, 0, 1835016, 13, 0, 1835020, 13, 0, 1835024, 13, 0, 1835028, 13, 0, 1835032, 13, 0, 1835036, 13, 0, 1835040, 13, 0, 1835044, 13, 0, 1835048, 13, 0, 1835052, 13, 0, 1835056, 12, 0, 1900547, 0, 0, 1900592, 12, 0, 1966083, 0, 0, 1966128, 12, 0, 2031619, 0, 0, 2031664, 12, 0, 2097155, 0, 0, 2097156, 13, 0, 2097160, 13, 0, 2097164, 13, 0, 2097168, 13, 0, 2097172, 13, 0, 2097176, 13, 0, 2097180, 13, 0, 2097184, 13, 0, 2097188, 13, 0, 2097192, 13, 0, 2097196, 13, 0, 2097200, 12, 0, 2162691, 0, 0, 2162736, 12, 0, 2228227, 0, 0, 2228272, 12, 0, 2293763, 0, 0, 2293808, 12, 0, 2359299, 7, 0, 2359300, 3, 0, 2359301, 3, 0, 2359302, 3, 0, 2359303, 3, 0, 2359304, 3, 0, 2359305, 3, 0, 2359306, 3, 0, 2359307, 3, 0, 2359308, 3, 0, 2359309, 3, 0, 2359310, 3, 0, 2359311, 3, 0, 2359312, 3, 0, 2359313, 3, 0, 2359314, 3, 0, 2359315, 3, 0, 2359316, 3, 0, 2359317, 3, 0, 2359318, 3, 0, 2359319, 3, 0, 2359320, 3, 0, 2359321, 3, 0, 2359322, 3, 0, 2359323, 3, 0, 2359324, 3, 0, 2359325, 3, 0, 2359326, 3, 0, 2359327, 3, 0, 2359328, 3, 0, 2359329, 3, 0, 2359330, 3, 0, 2359331, 3, 0, 2359332, 3, 0, 2359333, 3, 0, 2359334, 3, 0, 2359335, 3, 0, 2359336, 3, 0, 2359337, 3, 0, 2359338, 3, 0, 2359339, 3, 0, 2359340, 3, 0, 2359341, 3, 0, 2359342, 3, 0, 2359343, 3, 0, 2359344, 6, 0 )

[node name="Entrance" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="Entrance"]
position = Vector2( 386, 129 )

[node name="Position2D2" type="Position2D" parent="Entrance"]
position = Vector2( 383, 161 )

[node name="PlayerDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( 405, 160 )
z_index = 1
shape = SubResource( 19 )

[node name="Doors" type="Node2D" parent="."]

[node name="FirstDoor" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 720, 95 )
z_index = 2

[node name="PlayerSpawnPosition" type="Position2D" parent="."]
position = Vector2( 335, 163 )

[node name="EnemyPositions" type="Node2D" parent="."]

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
